
[TestGenerateSourceMap - 1]
compiler.CompilerOutput{
    Errors: {
    },
    JS:        "const foo = 5;\nconst bar = \"hello\";\n",
    SourceMap: "{\"version\":3,\"file\":\"input.js\",\"sources\":[\"input.esc\"],\"sourcesContent\":[\"val foo = 5\\nval bar = \\\"hello\\\"\\n\"],\"names\":[],\"mappings\":\"AAAA,YAAU;AACV,YAAU\"}",
}
---

[TestGenerateSourceMapWithFuncDecls - 1]
compiler.CompilerOutput{
    Errors: {
    },
    JS:        "function add(a, b) {\n  return a + b;\n}\nfunction sub(a, b) {\n  return a - b;\n}\n",
    SourceMap: "{\"version\":3,\"file\":\"input.js\",\"sources\":[\"input.esc\"],\"sourcesContent\":[\"fn add(a, b) {\\n  return a + b\\n}\\nfn sub(a, b) { return a - b }\\n\"],\"names\":[],\"mappings\":\"AAAA;EACE,OAAO;;AAET;EAAe,OAAO\"}",
}
---
